eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-application-deployment
  labels:
    app: bank-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bank-application
  template:
    metadata:
      labels:
        app: bank-application
    spec:
      containers:
      - name: bank-application
        image: 361769557367.dkr.ecr.eu-north-1.amazonaws.com/bank_application:latest
        ports:
        - containerPort: 8080
