eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-application-service
spec:
  selector:
    app: bank-application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
